--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,12 @@
                <version>2.1.3.RELEASE</version>
                -->
           </dependency>
+     
+     
+          <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+               <dependency>
+                   <groupId>com.alibaba</groupId>
+                   <artifactId>fastjson</artifactId>
+                   <version>1.1.15</version>
+               </dependency>
     </dependencies>
