--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
      -->
      <properties/>
         <java.version>1.8</java.version>
+
+            <!-- Use the latest version whenever possible. -->
+            <jackson.version>2.7.0</jackson.version>
+
     </properties>
 
 
@@ -43,4 +47,15 @@
                    <artifactId>fastjson</artifactId>
                    <version>1.1.15</version>
                </dependency>
+
+
+       
+         <!-- Jackson version mentioned in properties-->
+            <dependency>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-databind</artifactId>
+              <version>${jackson.version}</version>
+            </dependency>
+   
+        
     </dependencies>
