--- a/pom.xml
+++ b/pom.xml
@@ -69,3 +69,32 @@
    
         
     </dependencies>
+
+<build>
+        <plugins>
+            <plugin>
+                <!-- 在这里添加springloader plugin:热部署插件-->
+                
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin </artifactId>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>springloaded</artifactId>
+                            <version>1.2.4.RELEASE</version>
+                        </dependency>
+                    </dependencies>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                            <configuration>
+                                <classifier>exec</classifier>
+                            </configuration>
+                        </execution>
+                    </executions>
+
+            </plugin>
+        </plugins>
+    </build>
