--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+     
+     
+     <!-- It shouldn't work with springboot plugin in <plugin> -->
+          <dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-devtools</artifactId>
+              <optional>true</optional>
+              <scope>true</scope>
+          </dependency>
+
    
         
     </dependencies>
