--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
      
      
      <!-- It shouldn't work with springboot plugin in <plugin> -->
+     <!-- dependency of Springloader -->
           <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-devtools</artifactId>
