--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         </dependency>
      
      
-     <!-- It shouldn't work with springboot plugin in <plugin> -->
+     <!-- It shouldn't work with springboot plugin in <plugin> -- working with spring-boot-maven-plugin>
      <!-- dependency of Springloader -->
           <dependency>
               <groupId>org.springframework.boot</groupId>
@@ -107,5 +107,16 @@
                     </executions>
 
             </plugin>
+             
+             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!-- fork: devtools wont work without this config -->
+                    <fork>true</fork>
+                    
+                </configuration>
+            </plugin>
+             
         </plugins>
     </build>
