--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
               <optional>true</optional>
               <scope>true</scope>
           </dependency>
+     
+     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+               <dependency>
+                   <groupId>mysql</groupId>
+                   <artifactId>mysql-connector-java</artifactId>
+                   <version>5.1.6</version>
+               </dependency>
 
    
         
