--- a/pom.xml
+++ b/pom.xml
@@ -84,12 +84,12 @@
                    <version>5.1.6</version>
                </dependency>
 
-     <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
-          <dependency>
-              <groupId>org.springframework.data</groupId>
-              <artifactId>spring-data-jpa</artifactId>
-              <version>2.1.5.RELEASE</version>
-          </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+               <dependency>
+                   <groupId>org.springframework.boot</groupId>
+                   <artifactId>spring-boot-starter-data-jpa</artifactId>
+                   <version>2.1.3.RELEASE</version>
+               </dependency>
 
    
         
